name:                TidalFX
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/calumgunn/TidalFX#readme
license:             BSD3
license-file:        LICENSE
author:              Calum Gunn
maintainer:          calum@calumgunn.com
copyright:           None
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sound.Tidal.TidalFX
  build-depends:       base >= 4.7 && < 5,
                        tidal
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/calumgunn/TidalFX
